[package]
name = "software_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI Framework
iced = { version = "0.10", features = ["tokio", "debug"] }
# Git integration
git2 = "0.18"
# Database
rusqlite = { version = "0.30.0", features = ["bundled"] }
# Async runtime
tokio = { version = "1.36", features = ["full"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# Logging
log = "0.4"
env_logger = "0.11"
# Date and time
chrono = { version = "0.4", features = ["serde"] }
# File system operations
walkdir = "2.4"
# UUID generation
uuid = { version = "1.7", features = ["v4", "serde"] }
